<resources>
    <string name="web_client_id">406028396488-7u5r86ht0q9df1dn8apufkqdbl7evnkr.apps.googleusercontent.com</string>
    <string name="preference_private_file">com.xionce.doctorvet.preferences</string>
    <string name="preference_unique_id">unique_id</string>
    <string name="preference_user_email">user_email</string>
    <string name="preference_user_password">user_password</string>
    <string name="preference_user_login_type">user_login_type</string>
    <string name="preference_user_token">user_token</string>
    <string name="preference_owners_view_mode">owners_view_mode</string>
    <string name="preference_settings_temp_unit">settings_temp_unit</string>
    <string name="preference_settings_weight_unit">settings_weight_unit</string>
    <string name="preference_settings_general_config_title">Unidad de peso</string>
    <string name="preference_settings_temp_unit_title">Unidad de temperatura</string>
    <string name="preference_settings_weight_unit_title">Unidad de peso</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_delete_pregunta">¿Eliminar?</string>
    <string name="action_check_pregunta">¿Marcar como suministrado?</string>
    <string name="action_check_in_transit">¿Aceptar remito?</string>
    <string name="action_check_agenda">¿Marcar como realizado?</string>
    <string name="err_action">No se pudo realizar la acción</string>
    <string name="app_name">Doctor Vet Services</string>
    <string name="error_message">Ocurrió un error. Intenta nuevamente.</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="check">Guardar</string>
    <string name="name">Nombre</string>
    <string name="subscription_until">Suscripción hasta</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="email_invalido">Email inválido</string>
    <string name="telefono_invalido">Sin teléfono</string>
    <string name="agregar_email">Email</string>
    <string name="agregar_movil">Móvil</string>
    <string name="nuevo_pago">Nuevo pago</string>
    <string name="nuevo_pago_monto">Ingresa el monto</string>
    <string name="notes">Notas</string>
    <string name="descripcion">Descripción</string>
    <string name="anamnesis">Anamnesis</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="error_campo_empty">Completa aquí</string>
    <string name="error_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="error_corrige_campo">Corrige aquí</string>
    <string name="error_corrige_campo_vacio">Completa aquí</string>
    <string name="error_corrige_campo_no_existe">Selecciona un ítem existente</string>
    <string name="title_add_image">(imagen)</string>
    <string name="take_photo">Cámara</string>
    <string name="remove_photo">Remover</string>
    <string name="open_gallery">Galería</string>
    <string name="identificacion_regional">DNI / DU / Pasaporte / Identificación regional</string>
    <string name="owner">Propietario</string>
    <string name="owners">Propietarios</string>
    <string name="recientes">(activos en los últimos 60 días)</string>
    <string name="recientes_pets">(activas en los últimos 60 días)</string>
    <string name="owner_lcase">propietario</string>
    <string name="reason">Motivo</string>
    <string name="owner_search">Buscar propietario</string>
    <string name="user_search">Buscar usuario</string>
    <string name="pet_search">Buscar mascota</string>
    <string name="region_search">Buscar region</string>
    <string name="vet_search">Buscar veterinaria</string>
    <string name="race_search">Buscar raza</string>
    <string name="pelage_search">Buscar pelaje</string>
    <string name="symptom_search">Buscar síntoma</string>
    <string name="diagnostic_search">Buscar diagnóstico</string>
    <string name="treatment_search">Buscar tratamiento</string>
    <string name="character_search">Buscar pelaje</string>
    <string name="category_search">Buscar categoría</string>
    <string name="search_measure_unit">Buscar unidad de medida</string>
    <string name="buscar_estudio">Buscar estudio</string>
    <string name="buscar_product_servicios">Buscar producto / servicio</string>
    <string name="search_provider">Buscar distribuidor</string>
    <string name="search_manufacturer">Buscar fabricante</string>
    <string name="search">Buscar</string>
    <string name="most_used">Más usados</string>
    <string name="buscar_servicios">Buscar servicio</string>
    <string name="pet_lcase">mascota</string>
    <string name="related_owners">Propietarios relacionados</string>
    <string name="related_pets">Mascotas relacionadas</string>
    <string name="product_lcase">producto</string>
    <string name="inicio">Inicio</string>
    <string name="pagina_web">Pagina Web</string>
    <string name="name_region">Región</string>
    <string name="crear_veterinaria">Crear veterinaria</string>
    <string name="registrar_veterinario">Crear veterinario/a particular</string>
    <string name="unirse_a_veterinaria">Unirse a una veterinaria</string>
    <string name="unirse">Unirse a establecimiento</string>
    <string name="unirse_a_veterinaria_pregunta">¿Unirse a veterinaria?</string>
    <string name="unirse_a_veterinaria_mensaje">Se enviará una solicitud para unirse a %1$s.</string>
    <string name="veterinarias_no_hay_solicitudes_abiertas">No hay solicitudes pendientes. Vuelve atrás para unirte a una veterinaria.</string>
    <string name="unirse_a_veterinaria_unirse">unirse</string>
    <string name="verificar_solicitudes">Verificar solicitudes abiertas</string>
    <string name="event_name">Servicio / Nombre del evento</string>
    <string name="buscar">Buscar</string>
    <string name="fail_search">No hay información para mostrar.</string>
    <string name="start_search">Ingresa texto de búsqueda y luego presiona sobre buscar.</string>
    <string name="empty_recordset">No hay datos sobre los que buscar. Intenta crear utilizando +</string>
    <string name="solicitudes_user_no_aceptadas">Aún no hay solicitudes aceptadas, intenta nuevamente mas tarde</string>
    <string name="solicitudes_user_aceptadas">Tienes una solicitud aceptada, reinicia la app.</string>
    <string name="nuevo_item_descripcion">Sugiere un nuevo valor, ten en cuenta que será sometido a revisión y no estará disponible de inmediato.</string>
    <string name="nueva_race">Nueva raza</string>
    <string name="ingresando_nueva_race">Ingresando nueva raza</string>
    <string name="nuevo_pelage">Nuevo pelaje</string>
    <string name="new_sdt_ext">Nuevo síntoma / diagnóstico / tratamiento</string>
    <string name="ingresando_nuevo_pelage">Ingresando nuevo pelaje</string>
    <string name="nuevo_character">Nuevo carácter</string>
    <string name="ingresando_nuevo_character">Ingresando nuevo carácter</string>
    <string name="nueva_categoria">Nueva categoría</string>
    <string name="ingresando_nueva_categoria">Ingresando nueva categoría</string>
    <string name="ciudad">Ciudad</string>
    <string name="ciudad_descripcion">Haz referencia al núcleo más pequeño y conocido de la región. Ej.: San Andrés de la Barca</string>
    <string name="provincia">Provincia</string>
    <string name="provincia_descripcion">Haz referencia al la zona geográfica que engloba a la anterior. Ej.: Barcelona</string>
    <string name="pais">País</string>
    <string name="pais_descripcion">El país. Ej.: España</string>
    <string name="nueva_region">Nueva región</string>
    <string name="ingresando_nueva_region">Ingresando nueva región</string>
    <string name="aceptar_solucitud_pregunta">¿Aceptar solicitud?</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="aceptar_solucitud_mensaje">Se incluirá a %1$s en los usuarios de la veterinaria.</string>
    <string name="cancelar_unirse_a_veterinaria_cancelar">¿Eliminar solicitud?</string>
    <string name="ok">OK</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="vet">Veterinaria</string>
    <string name="name_user">Usuario</string>
    <string name="solicitud_aceptada">Solicitud aceptada</string>
    <string name="ver_solicitudes_pendientes">Ver solicitudes pendientes</string>
    <string name="error_sincro_google_facebook">No se puede conectar al servidor. Intenta nuevamente.</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="solicitudes_aceptar_eliminar">Acepta o elimina solicitudes</string>
    <string name="solicitud_pendiente">Solicitud pendiente</string>
    <string name="asociado">asociado</string>
    <string name="nuevo_owner">Nuevo propietario</string>
    <string name="ingresando_nuevo_owner">Ingresando nuevo propietario</string>
    <string name="edit_owner">Editar propietario</string>
    <string name="editing_owner">Editando propietario</string>
    <string name="edit_deposit">Editar almacen</string>
    <string name="editing_deposit">Editando almacen</string>
    <string name="new_deposit">Nuevo almacen</string>
    <string name="adding_new_deposit">Ingresando nuevo almacen</string>
    <string name="new_point">Nuevo punto de emisión</string>
    <string name="adding_new_point">Ingresando nuevo punto de emisión de comprobantes</string>
    <string name="edit_provider">Editar distribuidor</string>
    <string name="editting_provider">Editando disctribuidor</string>
    <string name="new_provider">Nuevo distribuidor</string>
    <string name="creating_provider">Ingresando disctribuidor</string>
    <string name="new_subtitle">Completa los datos</string>
    <string name="edit_subtitle">Edita los datos</string>
    <string name="new_vet">Nueva veterinaria</string>
    <string name="adding_new_vet">Ingresando nueva veterinaria</string>
    <string name="edit_vet">Editar veterinaria</string>
    <string name="editing_vet">Editando veterinaria</string>
    <string name="nueva_agenda">Nuevo evento</string>
    <string name="Ingresando_nueva_agenda">Ingresando nuevo evento</string>
    <string name="editar_agenda">Editar evento</string>
    <string name="editando_agenda">Editando evento</string>
    <string name="nuevo_user">Nuevo usuario</string>
    <string name="nuevo">Nuevo</string>
    <string name="nueva">Nueva</string>
    <string name="Ingresando_nuevo_user">Ingresando nuevo usuario</string>
    <string name="editar_user">Editar usuario</string>
    <string name="editando_user">Editando usuario</string>
    <string name="name_especie">Especie</string>
    <string name="name_race">Raza</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="dosage">Dosis</string>
    <string name="treatment">Tratamiento</string>
    <string name="name_pelage">Pelaje</string>
    <string name="name_gender">Género</string>
    <string name="name_character">Carácter</string>
    <string name="pets">Mascotas</string>
    <string name="agenda">Agenda</string>
    <string name="daily_cash">Caja diaria</string>
    <string name="about">Acerca de Doctor Vet</string>
    <string name="reportes">Reportes</string>
    <string name="continue_">Continuar</string>
    <string name="usar_otra_cuenta">Usar otra cuenta</string>
    <string name="check_login_valid">Enviamos un correo eléctronico a </string>
    <string name="pet">Mascota</string>
    <string name="estado">Estado</string>
    <string name="categoria">Categoría</string>
    <string name="es_categoria_alimentos">Es categoría de alimentos</string>
    <string name="es_categoria_servicios">Es categoría de servicios</string>
    <string name="accessibility_pick_start_date">Fecha de inicio</string>
    <string name="accessibility_pick_end_date">Fecha de finalización</string>
</resources>