<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/root_cordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginCheckValid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20">

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_login_valid"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/btn_login"
                style="@style/ActionButton"
                android:text="@string/continue_"/>

            <Button
                android:id="@+id/btn_use_another_account"
                style="@style/ActionButton"
                android:text="@string/usar_otra_cuenta"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>